[gd_scene load_steps=4 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TimeLabel" type="Label" parent="."]
margin_left = 198.891
margin_top = 184.208
margin_right = 332.891
margin_bottom = 244.208
custom_fonts/font = ExtResource( 2 )
text = "TIME: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 666.085
margin_top = 186.878
margin_right = 842.085
margin_bottom = 246.878
custom_fonts/font = ExtResource( 2 )
text = "SCORE: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="icon" type="Sprite" parent="."]
position = Vector2( 528.755, -1.04494 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
